--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "discord.js": "^12.2.0",
     "dotenv-flow": "^3.1.0",
+    "mongoose": "^5.12.3",
     "quick.db": "^7.1.1",
     "urban-dictionary": "^2.2.1"
   }
