--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "mongoose": "^5.12.3",
     "quick.db": "^7.1.1",
     "urban-dictionary": "^2.2.1"
+  },
+  "engines": {
+    "node": "17.x"
   }
 }
