--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@xivapi/js": "^0.4.0",
     "discord.js": "^13.6.0",
     "dotenv-flow": "^3.1.0",
     "mongoose": "^5.12.3",
+    "node-fetch": "^2.6.7",
     "quick.db": "^7.1.1",
     "urban-dictionary": "^2.2.1"
   },
