--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@xivapi/js": "^0.4.0",
-    "discord.js": "^13.6.0",
+    "cron": "^1.8.2",
+    "discord.js": "^13.3.1",
+    "discord.js-pagination": "^1.0.3",
+    "discordjs-button-pagination": "^1.0.7",
     "dotenv-flow": "^3.1.0",
-    "mongoose": "^5.12.3",
+    "mongoose": "^5.12.7",
+    "ms": "^2.1.3",
     "node-fetch": "^2.6.7",
-    "quick.db": "^7.1.1",
+    "quick.db": "^7.1.3",
     "urban-dictionary": "^2.2.1"
   },
   "engines": {
