--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@xivapi/js": "^0.4.0",
     "cron": "^1.8.2",
     "discord.js": "^13.3.1",
     "discord.js-pagination": "^1.0.3",
